--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "devDependencies": {
     "typescript": "^4.9.3",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "@types/node": "^18.11.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
